Fixed sidebar overlapping issues

--- a/src/Board.css
+++ b/src/Board.css
@@ -12,7 +12,9 @@
     float: left;
     width: 25%;
     text-align: center;
-    height: 100vh;
+    height: 90vh;
+    position: relative;
+    z-index: 1;
 }
 
 .Task {
